Fix scrollbar for amount

--- a/src/components/Create/index.scss
+++ b/src/components/Create/index.scss
@@ -138,6 +138,7 @@
       margin-bottom: 0.5rem;
       resize: none;
       text-align: center;
+      overflow: hidden;
       }
   }
 
