--- a/src/components/Edit/index.scss
+++ b/src/components/Edit/index.scss
@@ -117,6 +117,7 @@
       margin-bottom: 0.5rem;
       resize: none;
       text-align: center;
+      overflow: hidden;
       }
   }
 
